--- a/roles/login_items/defaults/main.yml
+++ b/roles/login_items/defaults/main.yml
@@ -3,8 +3,14 @@
 # Filenames must include .app extension.
 login_items_apps:
   - Alfred 3.app
+  - aText.app
+  - Bartender 2.app
+  - BetterTouchTool.app
   - CrasPlan menu bar.app
   - Dropbox.app
   - Flux.app
   - Google Photos Backup.app
   - HazelHelper.app
+  - Keyboard Maestro Engine.app
+  - Moom.app
+  - Path Finder.app
