Skip ms office during ci
- This is likely due to an unanswered prompt or some ms shit

--- a/mac.yml
+++ b/mac.yml
@@ -43,9 +43,9 @@
     - { cask_app_name: "sketchup", role: danbohea.cask-app, tags: ["sketchup","stage_1"] }
     - { cask_app_name: "appcleaner", tags: ["appcleaner","stage_1"], role: danbohea.cask-app }
     - { cask_app_name: "imageoptim", tags: ["imageoptim","stage_1"], role: danbohea.cask-app }
-    - { cask_app_name: "microsoft-office", tags: ["microsoft_office","stage_1"], role: danbohea.cask-app }
     - { cask_app_name: "qgis", tags: ["qgis","stage_1"], role: danbohea.cask-app }
     - { cask_app_name: "crashplan", tags: ["crashplan","stage_1","prompt"], role: danbohea.cask-app }
+    - { cask_app_name: "microsoft-office", tags: ["microsoft_office","stage_1","prompt","no_ci"], role: danbohea.cask-app }
 
     # Last
     # --------------------------------------------------------------------------
