--- a/mac.yml
+++ b/mac.yml
@@ -20,14 +20,14 @@
 
     - { role: macos, tags: ["macos","prep"] }
     - { role: danbohea.google-chrome, tags: ["google_chrome","prep"] }
-    - { role: quick_look_plugins, tags: ["quick_look_plugins","prep"] }
     - { cask_app_name: "dropbox", tags: ["dropbox","prep"], role: danbohea.cask-app }
 
     # Stage 1
     # --------------------------------------------------------------------------
 
-    - { role: danbohea.flux, tags: ["flux","stage_1"] }
     - { role: evernote, tags: ["evernote","stage_1"] }
+    - { role: quick_look_plugins, tags: ["quick_look_plugins","stage_1"] }
+    - { role: danbohea.flux, tags: ["flux","stage_1"] }
     - { role: danbohea.skype, tags: ["skype","stage_1"] }
     - { cask_app_name: "alfred", tags: ["alfred","stage_1","sudo"], role: danbohea.cask-app }
     - { cask_app_name: "the-unarchiver", tags: ["the_unarchiver","stage_1"], role: danbohea.cask-app }
