Don't use dark macos UI

--- a/roles/macos/tasks/general_ui_ux.yml
+++ b/roles/macos/tasks/general_ui_ux.yml
@@ -115,11 +115,11 @@
   notify:
     - killall
 
-- name: Set interface style to Dark
-  osx_defaults:
-    domain: NSGlobalDomain
-    key: AppleInterfaceStyle
-    type: string
-    value: Dark
-  notify:
-    - killall
+# - name: Set interface style to Dark
+#   osx_defaults:
+#     domain: NSGlobalDomain
+#     key: AppleInterfaceStyle
+#     type: string
+#     value: Dark
+#   notify:
+#     - killall
