Added Word to Dock

--- a/config.yml
+++ b/config.yml
@@ -9,6 +9,7 @@ dock_apps:
   - Google Chrome.app
   - Evernote.app
   - Skitch.app
+  - Microsoft Word.app
   - Calendar.app
   - Wunderlist.app
   - System Preferences.app
